--- a/config/basic.config
+++ b/config/basic.config
@@ -1,10 +1,12 @@
+DEFINE ERROR_STOP;
+
 http {
     server {
         location / {
             root /data/www;
         }
         location /images {
-            root /data;
+            root /data bonjour;
         }
     }
 
