meilleur commit pour commit mon commitage

--- a/config/basic.config
+++ b/config/basic.config
@@ -1,13 +1,14 @@
-DEFINE ERROR_STOP;
+#DEFINE SILENT;
 
 http {
-    server {
+    server 8080bonjour{
         location / {
             root /data/www;
         }
         location /images {
-            root /data bonjour;
+            root /data;
         }
+	location { root /data;;;;;}
     }
 
     server {
