--- a/config/basic.config
+++ b/config/basic.config
@@ -2,6 +2,10 @@
 
 http {
 	listen						8080;
+types {html text/html; css text/css;}
+location / {alias /data; index lol.html; root /lol;}
+location /data {alias /data/lol; index lol.html;}
+	error_page	400 401 402 403 404 =200 40X.html;
 	server_name					bonjour_test;
 	absolute_redirect 			off;
 	chunked_transfer_encoding	off;
