--- a/config/basic.config
+++ b/config/basic.config
@@ -1,23 +1,3 @@
 #DEFINE SILENT;
 
-http {
-	listen						8080;
-types {html text/html; css text/css;}
-location / {alias /data; index lol.html; root /lol;}
-location /data {alias /data/lol; index lol.html;}
-	error_page	400 401 402 403 404 =200 40X.html;
-	server_name					bonjour_test;
-	absolute_redirect 			off;
-	chunked_transfer_encoding	off;
-	client_body_timeout			5m;
-	client_body_buffer_size		6666;
-	client_body_in_file_only	clean;
-	client_header_buffer_size	7777;
-	client_max_body_size		1500000;
-	default_type				sa/tan;
-	ignore_invalid_headers		off;
-	keepalive_requests			150000000;
-	keepalive_time				5h;
-	log_not_found				off;
-	log_subrequest				on;
-}
+http { listen   8080; types { html text/html; css text/css; } location / {alias /data; index lol.html; root /lol;} location /data {alias /data/lol; index lol.html;} error_page 400 401 402 403 404 =200 40X.html; add_header bonjour lol; add_header wesh swag; server_name   bonjour_test; absolute_redirect  off; chunked_transfer_encoding off; client_body_timeout  5m; client_body_buffer_size 6666; client_body_in_file_only clean; client_header_buffer_size 7777; client_max_body_size 1500000; default_type  sa/tan; ignore_invalid_headers off; keepalive_requests  150000000; keepalive_time  5h; log_not_found  off; log_subrequest  on;}
