--- a/config/basic.config
+++ b/config/basic.config
@@ -1,10 +1,17 @@
 http {
 	server {
 		listen 80;
+		server_name salut;
 		location / { root /data; }
 	}
 	server {
 		listen 80;
+		server_name bonjour;
+		location / { alias /img; }
+	}
+	server {
+		listen 80;
+		server_name wesh;
 		location / { alias /img; }
 	}
 }
