toggle bool and indefinite buffer_size

--- a/config/basic.config
+++ b/config/basic.config
@@ -1,6 +1,8 @@
-DEFINE SPACE_MODE;
+#DEFINE SPACE_MODE;
+DEFINE TOGGLE_BOOL;
 
 http {
+absolute_redirect;
 	listen 8080; server_name lol;;;;;;
 	location / { root /data
 	index bonjour; }
