--- a/config/basic.config
+++ b/config/basic.config
@@ -2,8 +2,8 @@
 DEFINE TOGGLE_BOOL;
 
 http {
-absolute_redirect;
-	listen 8080; server_name lol;;;;;;
-	location / { root /data
-	index bonjour; }
+	location / {
+		root uber-frosch;
+		index index.html;
+	}
 }
