bon j'ai la flemme pour le moment! le epoll_wait marchera demain j'ai compris pourquoi

--- a/config/complete.config
+++ b/config/complete.config
@@ -3,7 +3,7 @@ DEFINE ERROR_STOP;
 #DEFINE TOGGLE_BOOL;
 
 http {
-	listen		80;
+	listen		63613;
 	server_name	localhost;
 
 	log_not_found on;
@@ -28,7 +28,7 @@ http {
 		}
 	}
 
-	server {
+	server 1121{
 		absolute_redirect;
 	}
 }
