Petit commit. Finds correct html page

--- a/config/basic.config
+++ b/config/basic.config
@@ -7,7 +7,9 @@ http {
 		index index.html;
 	}
 	location /bonjour/lol/ {
-		alias lol;
-		index lol.html;
+		alias uber-frosch;
+		index index.html;
 	}
+	error_page 404 uber-frosch/404.html;
+	default_type text/html;
 }
