Commit for the lulz

--- a/config/complete.config
+++ b/config/complete.config
@@ -16,7 +16,7 @@ http {
 		listen 					8080;
 		client_max_body_size	500;
 		location / {
-			root	/data;
+			root	uber-frosch;
 			index	index.html;
 		}
 	}
@@ -24,7 +24,7 @@ http {
 	server 8000 {
 		client_max_body_size	1000;
 		location / {
-			alias	/data;
+			alias	uber-frosch/;
 		}
 	}
 
