full deep copy of config

--- a/config/basic.config
+++ b/config/basic.config
@@ -11,6 +11,8 @@ http {
 		alias uber-frosch;
 		index index.html;
 	}
+	types { bonjour lol/cool;}
+	server 8080 {}
 	error_page 404 uber-frosch/404.html;
 	default_type text/html;
 }
