Added default root/alias which has a base value (it knows where to search)

--- a/config/complete.config
+++ b/config/complete.config
@@ -1,10 +1,12 @@
-DEFINE WARNING_AS_ERROR;
-DEFINE ERROR_STOP;
+#DEFINE WARNING_AS_ERROR;
+#DEFINE ERROR_STOP;
 #DEFINE TOGGLE_BOOL;
 
 http {
 	listen		63613;
 	server_name	localhost;
+	root		uber-frosch;
+	index		index.html;
 
 	log_not_found on;
 	log_subrequest on;
