beginning of cgi

--- a/config/easy.config
+++ b/config/easy.config
@@ -1,4 +1,5 @@
 http { listen 8080;
 	root uber-frosch;
 	error_page 404 /404.html;
+	location / { root bonjour; cgi_exec cgi; cgi_interpreter .py /bin/python; }
  }
