Corrected small mistake. CGI are now in the config

--- a/config/easy.config
+++ b/config/easy.config
@@ -1,5 +1,8 @@
 http { listen 8080;
 	root uber-frosch;
 	error_page 404 /404.html;
-	location / { root bonjour; cgi_exec cgi; cgi_interpreter .py /bin/python; }
+	location / { root bonjour; 
+cgi_exec cgi; 
+cgi_interpreter .py /bin/python; }
+server 9000 { location /bin {alias uber-frosch;cgi_exec cgi; cgi_interpreter .pl /usr/bin/perl;}}
  }
