--- a/config/easy.config
+++ b/config/easy.config
@@ -1,8 +1,10 @@
 http { listen 8080;
 	root uber-frosch;
 	error_page 404 /404.html;
-	location / { root bonjour; 
-cgi_exec cgi; 
+	cgi_exec bonjour.py;
+	location /bonjour/lol.html { cgi_exec lol.py }
+	location / { root bonjour;
+cgi_exec cgi.py;
 cgi_interpreter .py /bin/python; }
 server 9000 { location /bin {alias uber-frosch;cgi_exec cgi; cgi_interpreter .pl /usr/bin/perl;}}
  }
