--- a/config/easy.config
+++ b/config/easy.config
@@ -1,10 +1,13 @@
 http { listen 8080;
+server{
 	root uber-frosch;
 	error_page 404 /404.html;
 	cgi_exec bonjour.py;
-	location /bonjour/lol.html { cgi_exec lol.py }
-	location / { root bonjour;
-cgi_exec cgi.py;
-cgi_interpreter .py /bin/python; }
-server 9000 { location /bin {alias uber-frosch;cgi_exec cgi; cgi_interpreter .pl /usr/bin/perl;}}
+	location /cgi-bin/ {
+		root uber-frosch;
+		cgi_exec .cgi;
+		cgi_interpreter .py /bin/python3;
+	}
+	location / { root uber-frosch; index index.html; }
+}server 9000 { location /bin {alias uber-frosch;cgi_exec cgi; cgi_interpreter .pl /usr/bin/perl;}}
  }
