wildcards dans execve + execve fails

--- a/config/easy.config
+++ b/config/easy.config
@@ -2,10 +2,10 @@ http { listen 8080;
 server{
 	root uber-frosch;
 	error_page 404 /404.html;
-	cgi_exec bonjour.py;
 	location /cgi-bin/ {
 		root uber-frosch;
 		cgi_exec .cgi;
+		cgi_exec *.py;
 		cgi_interpreter .py /bin/python3;
 	}
 	location / { root uber-frosch; index index.html; }
