CORRECTION 404 not for unfound CGI
Big commit lmao

--- a/config/easy.config
+++ b/config/easy.config
@@ -4,8 +4,7 @@ server{
 	error_page 404 /404.html;
 	location /cgi-bin/ {
 		root uber-frosch;
-		cgi_exec .cgi;
-		cgi_exec *.py;
+		cgi_exec *.cgi;
 		cgi_interpreter .py /bin/python3;
 	}
 	location / { root uber-frosch; index index.html; }
