--- a/config/easy.config
+++ b/config/easy.config
@@ -2,10 +2,11 @@ http { listen 8080;
 server{
 	root uber-frosch;
 	error_page 404 /404.html;
+	cgi_exec *;
+	default_interpreter on;
 	location /cgi-bin/ {
 		root uber-frosch;
 		cgi_exec *.cgi;
-		cgi_interpreter .py /bin/python3;
 	}
 	location / { root uber-frosch; index index.html; }
 }server 9000 { location /bin {alias uber-frosch;cgi_exec cgi; cgi_interpreter .pl /usr/bin/perl;}}
