dir_listing directive, 403 Forbidden and bug correcting
dir_listing is attached to a location. Accessing a directory whil dir_listing is off will result in a 403 Forbidden

--- a/config/easy.config
+++ b/config/easy.config
@@ -4,6 +4,7 @@ server{
 	error_page 404 /404.html;
 	cgi_exec *;
 	default_interpreter on;
+	dir_listing off;
 	location /cgi-bin/ {
 		root uber-frosch;
 		cgi_exec *.cgi;
