Corrections de certains bugs sur le dir_listing et améliorations de vie

--- a/config/easy.config
+++ b/config/easy.config
@@ -4,11 +4,11 @@ server{
 	error_page 404 /404.html;
 	cgi_exec *;
 	default_interpreter on;
-	dir_listing off;
 	location /cgi-bin/ {
 		root uber-frosch;
 		cgi_exec *.cgi;
 	}
+location /images {  root uber-frosch; dir_listing on; }
 	location / { root uber-frosch; index index.html; }
 }server 9000 { location /bin {alias uber-frosch;cgi_exec cgi; cgi_interpreter .pl /usr/bin/perl;}}
  }
