Replacement location didn't copy right

--- a/config/easy.config
+++ b/config/easy.config
@@ -8,7 +8,7 @@ server{
 		root uber-frosch;
 		cgi_exec *.cgi;
 	}
-location /images {  root uber-frosch; dir_listing on; }
+location /images {  dir_listing on; }
 	location / { root uber-frosch; index index.html; }
 }server 9000 { location /bin {alias uber-frosch;cgi_exec cgi; cgi_interpreter .pl /usr/bin/perl;}}
  }
