--- a/config/easy.config
+++ b/config/easy.config
@@ -1,6 +1,7 @@
 http { listen 8080;
 server{
 	root uber-frosch;
+	methods get post ///delete;
 	error_page 404 /404.html;
 	cgi_exec *;
 	default_interpreter on;
