--- a/config/easy.config
+++ b/config/easy.config
@@ -1,15 +1,14 @@
 http { listen 8080;
 server{
 	root uber-frosch;
-	methods get post ///delete;
+	#methods /get post ///delete;
 	error_page 404 /404.html;
 	cgi_exec *;
 	default_interpreter on;
-	location /cgi-bin/ {
-		root uber-frosch;
-		cgi_exec *.cgi;
+	location /lol/ {
+		alias uber-frosch;
+		index test.html;
+		#methods get;
 	}
-location /images {  dir_listing on; }
-	location / { root uber-frosch; index index.html; }
-}server 9000 { location /bin {alias uber-frosch;cgi_exec cgi; cgi_interpreter .pl /usr/bin/perl;}}
- }
+	location /images {  dir_listing on; }
+ }}
