--- a/config/easy.config
+++ b/config/easy.config
@@ -2,13 +2,14 @@ http { listen 8080;
 server{
 	root uber-frosch;
 	#methods /get post ///delete;
+	methods std /delete options;
 	error_page 404 /404.html;
 	cgi_exec *;
 	default_interpreter on;
 	location /lol/ {
 		alias uber-frosch;
 		index test.html;
-		#methods get;
+		methods /std get;
 	}
 	location /images {  dir_listing on; }
  }}
