Chunked transfer encoding added.
Chunked transfer encoding allows to send the body in multiple packages.
Said packages are marked by their size in hex, a CRLF and the content.
The last package must be followed by an empty package marked as such :
0CRLFCRLF
I think we can do better and store the out file of get method in RC, and read it
package_size by package_size

--- a/config/easy.config
+++ b/config/easy.config
@@ -1,6 +1,8 @@
 http { listen 8080;
 server{
 	root uber-frosch;
+	chunked_transfer_encoding on;
+	index index.html;
 	#methods /get post ///delete;
 	methods std /delete options;
 	error_page 404 /404.html;
@@ -9,7 +11,7 @@ server{
 	location /lol/ {
 		alias uber-frosch;
 		index test.html;
-		methods /std get;
+		not_methods /std get;
 	}
 	location /images {  dir_listing on; }
  }}
