added the option to upload file. sadly, it broke the preexisting login fonction

--- a/config/complete.config
+++ b/config/complete.config
@@ -16,7 +16,7 @@ http {
 
 	server {
 		listen 					8080;
-		client_max_body_size	500;
+		client_max_body_size	1000000;
 		location / {
 			root	uber-frosch;
 			index	index.html;
