--- a/config/easy.config
+++ b/config/easy.config
@@ -2,7 +2,8 @@ http { listen 8080;
 server{
 	#keepalive_requests 0;
 	root uber-frosch;
-	chunked_transfer_encoding on;
+	client_header_buffer_size 8;
+	chunked_transfer_encoding off;
 	index index.html;
 	#methods /get post ///delete;
 	methods std /delete options;
