Better error codes, not allowed methods generalized, No content-length header handled, todo updated

--- a/config/easy.config
+++ b/config/easy.config
@@ -3,6 +3,7 @@ server{
 	#keepalive_requests 0;
 	root uber-frosch;
 	client_header_buffer_size 15;
+	client_max_body_size 2;
 	chunked_transfer_encoding off;
 	index index.html;
 	#methods /get post ///delete;
