Removed upload path and transformed allowed methods into a set rather than a map
Upload_path can be handled using the following in the config file : methods /post; OR not_methods post;
Methods are no longer stored in a map containing whether or not they are allowed.
If a method is in the set, it is allowed. An unauthorized method shall be removed.
Added the header 'Accept' containing allowed methods in case of a 405 error

--- a/config/easy.config
+++ b/config/easy.config
@@ -3,11 +3,10 @@ server{
 	#keepalive_requests 0;
 	root uber-frosch;
 	client_header_buffer_size 15;
-	client_max_body_size 2;
-	chunked_transfer_encoding off;
+	#chunked_transfer_encoding off;
 	index index.html;
 	#methods /get post ///delete;
-	methods std /delete options;
+	methods /post options;
 	error_page 404 /404.html;
 	cgi_exec *;
 	default_interpreter on;
@@ -16,5 +15,6 @@ server{
 		index test.html;
 		not_methods /std get;
 	}
-	location /images {  dir_listing on; }
+	location /images {  dir_listing on;
+		methods /post; }
  }}
