Corrected CGI bug

--- a/config/easy.config
+++ b/config/easy.config
@@ -8,7 +8,8 @@ server{
 	#methods /get post ///delete;
 	methods /post options;
 	error_page 404 /404.html;
-	cgi_exec *;
+	#cgi_exec *;
+	cgi_interpreter .py /usr/bin/python3;
 	default_interpreter on;
 	location /lol/ {
 		alias uber-frosch;
