--- a/config/easy.config
+++ b/config/easy.config
@@ -1,16 +1,22 @@
 http { listen 8080;
+index index.html;
 server{
 	#keepalive_requests 0;
 	root uber-frosch;
 	client_header_buffer_size 15;
 	#chunked_transfer_encoding off;
-	index index.html;
 	#methods /get post ///delete;
 	methods /post options;
 	error_page 404 /404.html;
 	#cgi_exec *;
 	cgi_interpreter .py /usr/bin/python3;
 	default_interpreter on;
+	location /client {
+		post_func	client_manager;
+	}
+	location /upload {
+		post_func	upload_manager;
+	}
 	location /lol/ {
 		alias uber-frosch;
 		index test.html;
