--- a/config/easy.config
+++ b/config/easy.config
@@ -6,13 +6,15 @@ server{
 	client_header_buffer_size 15;
 	#chunked_transfer_encoding off;
 	#methods /get post ///delete;
-	methods /post options;
+	methods post options;
 	error_page 404 /404.html;
 	#cgi_exec *;
 	cgi_interpreter .py /usr/bin/python3;
 	default_interpreter on;
 	location /client {
-		post_func	client_manager;
+		func		client_manager; # This line is equal to the following :;
+		#post_func	client_manager;
+		#del_func	client_manager;
 	}
 	location /upload {
 		post_func	upload_manager;
