--- a/config/easy.config
+++ b/config/easy.config
@@ -16,6 +16,11 @@ server{
 		#post_func	client_manager;
 		#del_func	client_manager;
 	}
+	location /client-secure {
+		func		client_manager;
+		alias		uber-frosch/cgi-bin/;
+		index		crypt.py;
+	}
 	location /upload {
 		post_func	upload_manager;
 	}
