Errors pages work again
im dumb

--- a/config/easy.config
+++ b/config/easy.config
@@ -18,6 +18,7 @@ server{
 	}
 	location /client-secure {
 		func		client_manager;
+		not_methods	get;
 		alias		uber-frosch/cgi-bin/;
 		index		crypt.py;
 	}
