New request reader based on EPOLLIN looping
Way safer than the other method, as it doesn't rely on client being able to perform a request.
It waits for EPOLLIN, reads once, modifies the fd to EPOLLIN|OUT, and while the EPOLLIN flag is active, it reads.
Has less chance of triggering a blocked recv

--- a/config/easy.config
+++ b/config/easy.config
@@ -3,7 +3,8 @@ index index.html;
 server{
 	#keepalive_requests 0;
 	root uber-frosch;
-	client_header_buffer_size 65;
+	client_header_buffer_size 50;
+	client_max_body_size 5;
 	#chunked_transfer_encoding off;
 	#methods /get post ///delete;
 	methods post options;
