--- a/config/easy.config
+++ b/config/easy.config
@@ -4,12 +4,12 @@ server{
 	#keepalive_requests 0;
 	root uber-frosch;
 	client_header_buffer_size 50;
-	client_max_body_size 5;
+	#client_max_body_size 5;
 	#chunked_transfer_encoding off;
 	#methods /get post ///delete;
 	methods post options;
 	error_page 404 /404.html;
-	#cgi_exec *;
+	#cgi_exec *.cgi;
 	cgi_interpreter .py /usr/bin/python3;
 	default_interpreter on;
 	location /client {
@@ -33,4 +33,7 @@ server{
 	}
 	location /images {  dir_listing on;
 		methods /post; }
+	location /cgi-bin {
+		cgi_exec *.cgi;
+	}
  }}
