--- a/config/config_test/weird.config
+++ b/config/config_test/weird.config
@@ -5,4 +5,6 @@ location / {
 
 http { server 9000 {} server 8000 { dir_listing off;} server {};;;;;;;
 	error_page 404 404.html =403; server 7000 {}
-	server 8000 { dir_listing on; location / { root aber-frasch; } } }
+	server 8000 { dir_listing on; location / { root aber-frasch; }
+		location test { location lol {}; index lol.html; }
+} }
