--- a/config/config_test/space_mode.config
+++ b/config/config_test/space_mode.config
@@ -1,9 +1,13 @@
-DEFINE SPACE_MODE; # SPACE_MODE IS REQUIRED TO BE ON THE FIRST LINE;
+DEFINE SPACE_MODE; # SPACE_MODE IS REQUIRED TO BE ON THE FIRST LINE
+
+# In space mode, comments don't need to have a separator as the \n serves as one
 
 http {
 	server 8080 {
+		func client_manager;
+		chunked_transfer_encoding on;
 		root uber-frosch
-		#index index.html; wow; mdr
-		dir_listing on;
+		index index.html; wow; mdr
+		#dir_listing on;
 	}
 }
