--- a/config/easy.config
+++ b/config/easy.config
@@ -1,14 +1,15 @@
 http { listen 8080;
-index index.html;
+#index index.html;
 server{
 	#keepalive_requests 0;
-	root uber-frosch;
+	#root uber-frosch;
 	client_header_buffer_size 50;
+	dir_listing on;
 	#client_max_body_size 5;
-	#chunked_transfer_encoding off;
+	chunked_transfer_encoding off;
 	#methods /get post ///delete;
 	methods post options;
-	error_page 404 /404.html;
+	#error_page 404 /404.html;
 	#cgi_exec *.cgi;
 	cgi_interpreter .py /usr/bin/python3;
 	default_interpreter on;
