--- a/config/config_test/log.config
+++ b/config/config_test/log.config
@@ -6,6 +6,7 @@ http {
 	log server focused; # Log server errors in focused file. So FATAL ERRORS and 5xx;
 						# For only fatal errors : 'log fatal focused'
 	log client independant; # Should return an error as it is in global scope;
+	log 40x focused;
 
 	root uber-frosch;
 	index index.html;
@@ -20,5 +21,6 @@ http {
 	server 8000 {
 		unlog server; # unlog everything server related;
 		unlog client independant; # unlog client with independant tag;
+		unlog 4xx focused;
 	}
 }
