add_header, no undesirable exit and wow

--- a/config/config_test/space_mode.config
+++ b/config/config_test/space_mode.config
@@ -4,8 +4,8 @@ DEFINE SPACE_MODE; # SPACE_MODE IS REQUIRED TO BE ON THE FIRST LINE
 
 http {
 	server 8080 {
-		func client_manager;
-		chunked_transfer_encoding on;
+		func client_manager
+		chunked_transfer_encoding on
 		root uber-frosch
 		index index.html; wow; mdr
 		#dir_listing on;
