--- a/config/easy.config
+++ b/config/easy.config
@@ -1,6 +1,6 @@
 http { listen 8080;
 index index.html;
-server{
+server localhost:8080:lol {
 	#keepalive_requests 0;
 	root uber-frosch;
 	client_header_buffer_size 50;
@@ -37,4 +37,10 @@ server{
 	location /cgi-bin {
 		cgi_exec *.cgi;
 	}
- }}
+ }
+server c1r4p1.42nice.fr {
+	root uber-frosch;
+	index login.html;
+}
+
+}
