--- a/config/easy.config
+++ b/config/easy.config
@@ -1,6 +1,6 @@
 http { listen 8080;
 index index.html;
-server localhost:8080:lol {
+server {
 	#keepalive_requests 0;
 	root uber-frosch;
 	client_header_buffer_size 50;
@@ -9,8 +9,9 @@ server localhost:8080:lol {
 	chunked_transfer_encoding off;
 	#methods /get post ///delete;
 	methods post options;
-	#error_page 404 /404.html;
+	error_page 404 /404.html;
 	#cgi_exec *.cgi;
+	unlog;
 	cgi_interpreter .py /usr/bin/python3;
 	default_interpreter on;
 	location /client {
@@ -31,6 +32,9 @@ server localhost:8080:lol {
 		alias uber-frosch;
 		index test.html;
 		not_methods /std get;
+		location /lol/mdr {
+			index index.html;
+		}
 	}
 	location /images {  dir_listing on;
 		methods /post; }
@@ -38,7 +42,7 @@ server localhost:8080:lol {
 		cgi_exec *.cgi;
 	}
  }
-server c1r4p1.42nice.fr {
+server c1r4p1.42nice.fr 9000 : : :8000 {
 	root /uber-frosch;
 	index login.html;
 }
