--- a/config/easy.config
+++ b/config/easy.config
@@ -1,14 +1,16 @@
 http { listen 8080;
 index index.html;
-server {
+server 8000 { root uber-frosch; index memes.html; }
+#server 8080 { root uber-frosch; index login.html; }
+server 8080 {
 	#keepalive_requests 0;
 	root uber-frosch;
 	client_header_buffer_size 50;
 	dir_listing off;
-	#client_max_body_size 5;
-	chunked_transfer_encoding off;
+	client_max_body_size 50;
+	#chunked_transfer_encoding on;
 	#methods /get post ///delete;
-	methods post options;
+	methods post options mdr;
 	error_page 404 /404.html;
 	#cgi_exec *.cgi;
 	unlog;
@@ -25,7 +27,8 @@ server {
 		alias		uber-frosch/cgi-bin/;
 		index		crypt.py;
 	}
-	location /upload {
+	location /images {
+		methods post;
 		post_func	upload_manager;
 	}
 	location /lol/ {
@@ -33,15 +36,23 @@ server {
 		index test.html;
 		not_methods /std get;
 	}
-	location /images {  dir_listing on;
+	#location /images {  dir_listing on;
 		methods /post; }
-	location /cgi-bin {
+	location /cgi-bin/ {
+		#index none;
+		dir_listing on;
 		cgi_exec *.cgi;
+		cgi_exec *.sh; # freaky;
 	}
  }
-server c1r4p1.42nice.fr 9000 : : :8080 {
+server c1r8p1.42nice.fr 9000 : : :8080 {
 	root /uber-frosch;
 	index login.html;
+}
+
+server lol.com 9000 : : :8080 {
+	root /uber-frosch;
+	index memes.html;
 }
 
 }
