Derniers petits bug fix lmao

--- a/config/easy.config
+++ b/config/easy.config
@@ -5,9 +5,10 @@ server 8000 { root uber-frosch; index memes.html; }
 server 8080 {
 	#keepalive_requests 0;
 	root uber-frosch;
-	client_header_buffer_size 50;
+	#client_header_buffer_size 50;
+	client_body_buffer_size 5000;
 	dir_listing off;
-	client_max_body_size 50;
+	#client_max_body_size 50;
 	#chunked_transfer_encoding on;
 	#methods /get post ///delete;
 	methods post options mdr;
@@ -27,9 +28,12 @@ server 8080 {
 		alias		uber-frosch/cgi-bin/;
 		index		crypt.py;
 	}
-	location /images {
+	location /upload {
 		methods post;
-		post_func	upload_manager;
+		func	upload_manager;
+		alias	uber-frosch;
+		dir_listing on;
+		index none;
 	}
 	location /lol/ {
 		alias uber-frosch;
