it's the final commit

--- a/config/easy.config
+++ b/config/easy.config
@@ -8,13 +8,16 @@ server 8080 {
 	#client_header_buffer_size 50;
 	client_body_buffer_size 5000;
 	dir_listing off;
-	#client_max_body_size 50;
+	client_max_body_size 50;
 	#chunked_transfer_encoding on;
 	#methods /get post ///delete;
-	methods post options mdr;
-	error_page 404 /404.html;
+	methods options mdr;
+	error_page 404 /404.html = ;
+	error_page 403 /index.html;
 	#cgi_exec *.cgi;
-	unlog;
+	#unlog;
+	log all default;
+	log focused 5xx;
 	cgi_interpreter .py /usr/bin/python3;
 	default_interpreter on;
 	location /client {
@@ -38,7 +41,7 @@ server 8080 {
 	location /lol/ {
 		alias uber-frosch;
 		index test.html;
-		not_methods /std get;
+		not_methods /std /get;
 	}
 	#location /images {  dir_listing on;
 		methods /post; }
@@ -49,7 +52,7 @@ server 8080 {
 		cgi_exec *.sh; # freaky;
 	}
  }
-server c1r8p1.42nice.fr 9000 : : :8080 {
+server c1r4p1.42nice.fr 9000 : : :8080 {
 	root /uber-frosch;
 	index login.html;
 }
