Rajout d'un petit dernier test pour montrer que les seg fault sont geres aussi lol

--- a/config/easy.config
+++ b/config/easy.config
@@ -14,7 +14,7 @@ server 8080 {
 	methods options mdr;
 	error_page 404 /404.html = ;
 	error_page 403 /index.html;
-	#cgi_exec *.cgi;
+	cgi_exec *.cgi;
 	#unlog;
 	log all default;
 	log focused 5xx;
